--- a/app/src/main/res/layout/activity_china_game1.xml
+++ b/app/src/main/res/layout/activity_china_game1.xml
@@ -37,6 +37,7 @@
         android:id="@+id/button2"
         android:layout_width="217dp"
         android:layout_height="104dp"
+        android:onClick="CorrectClicked"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,22 +49,25 @@
         android:id="@+id/button3"
         android:layout_width="217dp"
         android:layout_height="104dp"
+        android:onClick="WrongClicked"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.139" />
+        app:layout_constraintVertical_bias="0.067" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="217dp"
         android:layout_height="104dp"
+        android:onClick="WrongClicked"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/Question_textview"
@@ -90,5 +94,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.035" />
+
+    <ImageView
+        android:id="@+id/check_mark_imageview"
+        android:layout_width="140dp"
+        android:layout_height="171dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Score_textview"
+        app:layout_constraintVertical_bias="0.123"
+        app:srcCompat="@drawable/ic_check_mark_vector" />
+
+    <ImageView
+        android:id="@+id/cross_mark_imageview"
+        android:layout_width="163dp"
+        android:layout_height="163dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.161"
+        app:srcCompat="@drawable/cross_mark_vector" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
