--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
         android:layout_marginEnd="166dp"
         android:layout_marginBottom="45dp"
         android:onClick="loginAct"
-        android:text="Login"
+        android:text="登入"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginEnd="158dp"
         android:layout_marginBottom="279dp"
         android:onClick="SignupAct"
-        android:text="Sign up"
+        android:text="註冊"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
