--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,7 +42,7 @@
         android:layout_marginTop="59dp"
         android:layout_marginEnd="161dp"
         android:onClick="signupClicked"
-        android:text="sign up"
+        android:text="註冊"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SignupPassword" />
