--- a/app/src/main/res/layout/activity_italy_game5.xml
+++ b/app/src/main/res/layout/activity_italy_game5.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6F4F4"
-    tools:context=".China_Game1">
+    tools:context=".Italy_Game5">
 
     <ImageView
         android:id="@+id/imageView"
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:contentDescription="@string/background"
         android:scaleType="centerCrop"
-        android:src="@drawable/china_play_background"
+        android:src="@drawable/italy_play_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,7 +37,7 @@
         android:layout_width="217dp"
         android:layout_height="104dp"
         android:onClick="WrongClicked"
-        android:text="@string/ChinaA1_1"
+        android:text="@string/ItalyA5_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_width="217dp"
         android:layout_height="104dp"
         android:onClick="WrongClicked"
-        android:text="@string/ChinaA1_2"
+        android:text="@string/ItalyA5_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_width="217dp"
         android:layout_height="104dp"
         android:onClick="WrongClicked"
-        android:text="@string/ChinaA1_3"
+        android:text="@string/ItalyA5_3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         android:layout_width="217dp"
         android:layout_height="104dp"
         android:onClick="CorrectClicked"
-        android:text="@string/ChinaA1_4"
+        android:text="@string/ItalyA5_4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:layout_height="173dp"
         android:background="#DDFFFFFF"
         android:importantForAccessibility="no"
-        android:text="@string/ChinaQ1"
+        android:text="@string/ItalyQ5"
         app:layout_constraintBottom_toTopOf="@+id/button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
