--- a/app/src/main/res/layout/activity_china_game5.xml
+++ b/app/src/main/res/layout/activity_china_game5.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6F4F4"
-    tools:context=".China_Game1">
+    tools:context=".China_Game5">
 
     <ImageView
         android:id="@+id/imageView"
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.45" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -37,7 +37,7 @@
         android:layout_width="217dp"
         android:layout_height="104dp"
         android:onClick="WrongClicked"
-        android:text="@string/ChinaA1_1"
+        android:text="@string/ChinaA5_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_width="217dp"
         android:layout_height="104dp"
         android:onClick="WrongClicked"
-        android:text="@string/ChinaA1_2"
+        android:text="@string/ChinaA5_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +60,8 @@
         android:id="@+id/button3"
         android:layout_width="217dp"
         android:layout_height="104dp"
-        android:onClick="WrongClicked"
-        android:text="@string/ChinaA1_3"
+        android:onClick="CorrectClicked"
+        android:text="@string/ChinaA5_3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +72,8 @@
         android:id="@+id/button4"
         android:layout_width="217dp"
         android:layout_height="104dp"
-        android:onClick="CorrectClicked"
-        android:text="@string/ChinaA1_4"
+        android:onClick="WrongClicked"
+        android:text="@string/ChinaA5_4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:layout_height="173dp"
         android:background="#DDFFFFFF"
         android:importantForAccessibility="no"
-        android:text="@string/ChinaQ1"
+        android:text="@string/ChinaQ5"
         app:layout_constraintBottom_toTopOf="@+id/button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
