--- a/app/src/main/res/layout/activity_china_into_main.xml
+++ b/app/src/main/res/layout/activity_china_into_main.xml
@@ -5,12 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".China_into_main">
+    <ImageView
+        android:id="@+id/background_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#EFE0C6"
+        android:contentDescription="@string/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/plantext" />
 
     <Button
         android:id="@+id/button16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="104dp"
         android:onClick="btn1"
         android:text="大家都吃「鴨蛋」的時代"
@@ -19,14 +32,15 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="386dp"
-        android:layout_height="91dp"
+        android:layout_width="312dp"
+        android:layout_height="62dp"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="148dp"
         android:layout_marginEnd="6dp"
         android:text="為什麼大家常吃「雞蛋」，不吃「鴨蛋」？\n帶你回到雞蛋崛起的時代"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="52dp"
         android:onClick="btn2"
         android:text="蛋品工業崛起！"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="80dp"
         android:onClick="btn3"
         android:text="何不食雞子？"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +70,8 @@
         android:id="@+id/button19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="32dp"
         android:onClick="btn4"
         android:text="不吃鴨蛋，那為什麼吃雞蛋？"
         app:layout_constraintStart_toStartOf="parent"
