--- a/app/src/main/res/layout/activity_china_intro2.xml
+++ b/app/src/main/res/layout/activity_china_intro2.xml
@@ -5,16 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".China_intro2">
+    <ImageView
+        android:id="@+id/background_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#EFE0C6"
+        android:contentDescription="@string/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/plantext" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="311dp"
-        android:layout_height="650dp"
+        android:layout_width="325dp"
+        android:layout_height="491dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="57dp"
         android:text="@string/China_intro2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
