--- a/app/src/main/res/layout/activity_italy_intro3.xml
+++ b/app/src/main/res/layout/activity_italy_intro3.xml
@@ -5,13 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Italy_intro3">
+    <ImageView
+        android:id="@+id/background_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#EFE0C6"
+        android:contentDescription="@string/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/plantext" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="338dp"
-        android:layout_height="632dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="64dp"
+        android:layout_width="294dp"
+        android:layout_height="594dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="76dp"
         android:text="@string/Italy_intro3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
