--- a/app/src/main/res/layout/activity_japan_fugu_intro.xml
+++ b/app/src/main/res/layout/activity_japan_fugu_intro.xml
@@ -5,7 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Japan_Fugu_intro">
-
+    <ImageView
+        android:id="@+id/background_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#EFE0C6"
+        android:contentDescription="@string/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/plantext" />
     <TextView
         android:id="@+id/textView3"
         android:scrollbars="vertical"
