--- a/app/src/main/res/layout/activity_japan_sashimi_intro.xml
+++ b/app/src/main/res/layout/activity_japan_sashimi_intro.xml
@@ -5,16 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Japan_sashimi_intro">
+    <ImageView
+        android:id="@+id/background_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#EFE0C6"
+        android:contentDescription="@string/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/plantext" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="308dp"
         android:layout_height="593dp"
         android:layout_marginStart="51dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="112dp"
         android:layout_marginEnd="52dp"
         android:text="@string/Sashimi"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
